--- a/.github/workflows/build-one.yml
+++ b/.github/workflows/build-one.yml
@@ -50,8 +50,9 @@ jobs:
       run: |
         cp -r tools /tmp
         docker run -v /tmp/tools:/tools \
-        rhub/r-minimal:test bash -c "/tools/calculate_tags.sh ${{ inputs.rversion }}"
-        cp "$GITHUB_OUTPUT" tags.txt
+          rhub/r-minimal:test \
+          bash -c "/tools/calculate_tags.sh ${{ inputs.rversion }}" \
+          | tail -1 > tags.txt
         cat tags.txt
       shell: bash
 
