Fix rJava example

--- a/examples/rJava/Dockerfile
+++ b/examples/rJava/Dockerfile
@@ -3,5 +3,5 @@ FROM rhub/r-minimal
 RUN installr -c -p -a openjdk17 \
     && R CMD javareconf \
     && installr -d \
-    -t "make pcre2-dev bzip2-dev xz-dev" \
-    -a "pcre2 libbz2 xz-libs" rJava
+    -t "make pcre2-dev bzip2-dev xz-dev zstd-dev" \
+    -a "pcre2 libbz2 xz-libs zstd" rJava
