Fix arrow example

--- a/examples/arrow/Dockerfile
+++ b/examples/arrow/Dockerfile
@@ -3,12 +3,11 @@ FROM rhub/r-minimal
 
 RUN mkdir -p ~/.R && echo "LDFLAGS+=-fPIC" >> ~/.R/Makevars
 
-# The most recent 15.0.1 version of the arrow package does not compile
-# on Alpine, so we install the previous version. If you had success with
-# newer versions, please let us know! Thanks!
+# Alpine 3.22 (base of rhub/r-minimal) has arrow 19.x, so that's
+# what we install, also.
 
 RUN installr -d \
     -t "make openssl-dev cmake linux-headers apache-arrow-dev" \
-    -a "openssl libarrow_dataset libarrow" arrow@14.0.2.1
+    -a "openssl libarrow_dataset libarrow" arrow@19.0.1.1
 
 RUN R -q -e 'library(arrow)'
